modificato il wizard di creazione del document per renderlo simile alla compilazione del documento

--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
@@ -22,7 +22,7 @@ else
             <div class="hstack">
                 <RadzenLabel Text="Data:" Component="Data" Style="margin-right: 8px; vertical-align: middle;" />
                 <RadzenDatePicker Value="@Document.SignDate" TValue="DateTime?" DateFormat="dd/MM/yyyy HH:mm"
-                                  ShowTime="true" Change="@(args=> SaveSignDate(args))" class="my-input" />
+                                  ShowTime="true" Change="@(args=> SaveSignDate(args))" class="inputBorder" />
             </div>
             <div class="row">
                     <div class="col-12 col-md-6 my-2">
