--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
@@ -37,7 +37,7 @@
                                                 <div class="hstack">
                                                     <div>
                                                         <RadzenDropDown Value="@answer" Data=@question.Choices TValue="DocumentChoiceModel"
-                                                                        TextProperty="Value" class="my-input"
+                                                                        TextProperty="Value" class="inputBorder"
                                                             Change="@(args => SelectedAnswer(args, question, question.CurrentChoices.IndexOf(answer)))" />
                                                     </div>
                                                     @if (ShowDeleteChoiceButton(answer, question))
