--- a/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
+++ b/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
@@ -399,7 +399,7 @@ else
     </div>
 
     <div class="m-4 d-flex justify-content-center">
-        <RadzenButton Text="Stampa" Click="StampaDocumento" class="buttonPrint" IsBusy="@creation"/>
+        <RadzenButton Icon="print" Text="Stampa" Click="StampaDocumento" class="buttonPrint" IsBusy="@creation"/>
     </div>
     <div class="mt-3"></div>
 }
