--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -28,7 +28,7 @@ else
     <div class="d-flex justify-content-center mt-3">
         <RadzenButton Icon="save" Text="Salva" Click="SalvaDocumento" Style="width: 200px;height:40px;" IsBusy="@onSaving" />
         <div class="mx-2"></div>
-        <RadzenButton Icon="print" Text="Stampa" Click="StampaDocumento" Style="width:200px;height:40px;"/>
+        <RadzenButton Icon="article" Text="Anteprima" Click="StampaDocumento" Style="width:200px;height:40px;"/>
     </div>
     <div class="mt-3"></div>
 }
