--- a/ConstructionSiteLibrary/Components/Documents/Compilation/ReportConstructorSiteDataSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/ReportConstructorSiteDataSection.razor
@@ -28,7 +28,7 @@ else
                 <div class="col-12 col-md-3">
                     <RadzenLabel Text="Data sopralluogo:" Component="RadzenDatePickerBindValue" />
                     <RadzenDatePicker @bind-Value=@compilationDate DateFormat="dd/MM/yyyy"
-                                        Name="RadzenDatePickerBindValue"
+                                      Name="RadzenDatePickerBindValue" class="inputBorder"
                     Change="@(args=> CompilationDateChanged(args))">
                         <FooterTemplate>
                             <RadzenButton Click=@(args =>compilationDate = DateTime.Now) Text="Oggi" class="my-3 w-100" />
@@ -38,7 +38,7 @@ else
                 <div class="col-12 col-md-3">
                     <RadzenLabel Text="Ora:" Component="DatePickerTimeOnly" />
                     <RadzenDatePicker @bind-Value=@compilationHour ShowTime="true" TimeOnly="true" DateFormat="HH:mm" Name="DatePickerTimeOnly"
-                                        Change="@(args=> CompilationHoursChanged(args))" class="w-100">
+                                      Change="@(args=> CompilationHoursChanged(args))" class="w-100 inputBorder">
                         <FooterTemplate>
                             <RadzenButton Click=@(args => compilationHour = DateTime.Now) Text="Adesso" class="my-3 w-100" />
                         </FooterTemplate>
@@ -59,11 +59,11 @@ else
             <div class="row my-1">
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Committente:" Component="Committente" />
-                    <RadzenDropDown @bind-Value="@Document.Client" Data="@ClientsList" Name="Committente" TValue="ClientModel" TextProperty="Name" class="w-100" />
+                    <RadzenDropDown @bind-Value="@Document.Client" Data="@ClientsList" Name="Committente" TValue="ClientModel" TextProperty="Name" class="w-100 inputBorder" />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Inizio lavori:" Component="InizioLavori" />
-                    <RadzenDatePicker @bind-Value=@Document.ConstructorSite.StartDate ShowTime="true" DateFormat="dd/MM/yyyy h:mm" Name="InizioLavori" class="w-100">
+                    <RadzenDatePicker @bind-Value=@Document.ConstructorSite.StartDate ShowTime="true" DateFormat="dd/MM/yyyy h:mm" Name="InizioLavori" class="w-100 inputBorder">
                         <FooterTemplate>
                             <RadzenButton Click=@(args =>
                                         Document.ConstructorSite.StartDate = DateTime.Now) Text="Ora"
@@ -74,32 +74,32 @@ else
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Indirizzo cantiere:" Component="IndirizzoCantiere" />
                     <RadzenTextArea Placeholder="Inserisci l'indirizzo del cantiere" Name="IndirizzoCantiere"
-                        class="w-100" @bind-Value=@Document.ConstructorSite.Address />
+                                    class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.Address />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Lavori di:" Component="LavoriDi" />
                     <RadzenTextArea Placeholder="Inserisci il motivo dei lavori" Name="LavoriDi"
-                        class="w-100" @bind-Value=@Document.ConstructorSite.JobDescription />
+                                    class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.JobDescription />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Notifica preliminare inizio cantiere:" Component="NotificaPreliminareInizio" />
                     <RadzenDatePicker ShowTime=false DateFormat="dd/MM/yyyy" Name="NotificaPreliminareInizio"
-                        class="w-100" @bind-Value=@Document.ConstructorSite.PreliminaryNotificationStartDate />
+                                      class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.PreliminaryNotificationStartDate />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Id. SICO:" Component="IdSICOInizio" />
                     <RadzenTextBox Placeholder="Inserisci Id. SICO" Name="IdSICOInizio"
-                        class="w-100" @bind-Value=@Document.ConstructorSite.IdSico />
+                                   class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.IdSico />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Notifica preliminare in corso:" Component="NotificaPreliminareInCorso" />
                     <RadzenDatePicker ShowTime=false DateFormat="dd/MM/yyyy" Name="NotificaPreliminareInCorso"
-                        class="w-100" @bind-Value=@Document.ConstructorSite.PreliminaryNotificationInProgress />
+                                      class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.PreliminaryNotificationInProgress />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Id. SICO:" Component="IdSICOInCorso" />
                     <RadzenTextBox Placeholder="Inserisci Id. SICO" Name="IdSICOInCorso"
-                        class="w-100" @bind-Value=@Document.ConstructorSite.IdSicoInProgress />
+                        class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.IdSicoInProgress />
                 </div>
             </div>
         </fieldset>
