aggiunto bottone anteprima nella top bar

--- a/ConstructionSiteLibrary/Components/Generics/ActivityTopBar.razor
+++ b/ConstructionSiteLibrary/Components/Generics/ActivityTopBar.razor
@@ -18,7 +18,11 @@
         </RadzenFormField>
 
     </div>
-    <div class="col d-flex justify-content-center justify-content-lg-end">
+    <div class="col d-flex justify-content-center justify-content-lg-end mt-sm-1">
+        @if (ShowPreview)
+        {
+            <RadzenButton Icon="article" Text="Anteprima" Click="@Preview" IsBusy="@onSaving" class="my-button" Style="margin-right:10px;"/>
+        }
         <RadzenButton Icon="save" Text="Salva" Click="@Save" IsBusy="@onSaving" class="my-button" />
     </div>
 </div>
@@ -34,7 +38,11 @@
     [Parameter]
     public EventCallback OnButtonSaveClicked { get; set; }
     [Parameter]
+    public EventCallback OnButtonPreviewClicked { get; set; }
+    [Parameter]
     public string BackButtonText { get; set; } = "Indietro";
+    [Parameter]
+    public bool ShowPreview { get; set; }
     [Parameter]
     public DocumentNavigator? DocumentNavigator{ get; set; }
 
@@ -78,6 +86,11 @@
     {
         ChangeOnSavingStatus(true);
         await OnButtonSaveClicked.InvokeAsync();
+    }
+
+    private async Task Preview()
+    {
+        await OnButtonPreviewClicked.InvokeAsync();
     }
 
     private async Task NavigaPagina(object args)
