--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -18,7 +18,8 @@ else
 {
     <meta name="viewport" content="width=@viewSize.Width">
     <div class="">
-        <ActivityTopBar @ref="@topBar" OnButtonSaveClicked="SaveDocument" DocumentNavigator="@documenNavigator" />
+        <ActivityTopBar @ref="@topBar" OnButtonSaveClicked="SaveDocument" DocumentNavigator="@documenNavigator"
+                        OnButtonPreviewClicked="@VisualizzaAnteprimaDocumento" ShowPreview="true" />
         <ReportConstructorSiteDataSection Document="@document" DocumentNavigator="@documenNavigator" />
         <CompaniesPresentSection Companies="@document.Companies" DocumentNavigator="@documenNavigator" />
         <QuestionsSection Categories="document.Categories" Companies="document.Companies" OnStateChangeNotification="@UpdateDocument"
@@ -29,11 +30,11 @@ else
         <CompaniesSignsSection Document="@document" DocumentNavigator="@documenNavigator" />
        
     </div>
-    <div class="d-flex justify-content-center mt-3">
+@*     <div class="d-flex justify-content-center mt-3">
         <RadzenButton Icon="save" Text="Salva" Click="SaveDocument" Style="width: 200px;height:40px;" IsBusy="@onSaving" />
         <div class="mx-2"></div>
-        <RadzenButton Icon="article" Text="Anteprima" Click="StampaDocumento" Style="width:200px;height:40px;"/>
-    </div>
+        <RadzenButton Icon="article" Text="Anteprima" Click="VisualizzaAnteprimaDocumento" Style="width:200px;height:40px;"/>
+    </div> *@
     <div class="mt-3"></div>
 }
 
@@ -74,7 +75,7 @@ else
         StateHasChanged();
     }
 
-    private async Task StampaDocumento()
+    private async Task VisualizzaAnteprimaDocumento()
     {
         if(viewSize.Width < 1024)
         {
