--- a/ConstructionSiteLibrary/Components/Users/UserInfo.razor
+++ b/ConstructionSiteLibrary/Components/Users/UserInfo.razor
@@ -2,8 +2,10 @@
 @using ConstructionSiteLibrary.Interfaces
 @using ConstructionSiteLibrary.Components.Generics
 @using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.JSInterop
 
 @inject ICameraService CameraService
+@inject IJSRuntime JS
 
 <div class="card p-4">
     <div class="row my-2 justify-content-md-center">
@@ -73,75 +75,6 @@
         </div>
     </div>
 
-    <script>
-        let dropArea = document.querySelector(".drag-area");
-        let dragText = document.querySelector(".header");
-
-        let button = dropArea.querySelector(".button");
-        let input = dropArea.querySelector("input");
-
-        let file;
-
-        button.onclick = () => {
-            input.click();
-        };
-
-        // when browse
-        input.addEventListener("change", function () {
-            file = this.files[0];
-            dropArea.classList.add("active");
-            displayFile();
-        });
-
-        // when file is inside drag area
-        dropArea.addEventListener("dragover", (event) => {
-            event.preventDefault();
-            dropArea.classList.add("active");
-            dragText.textContent = "Rilascia";
-            // console.log('File is inside the drag area');
-        });
-
-        // when file leave the drag area
-        dropArea.addEventListener("dragleave", () => {
-            dropArea.classList.remove("active");
-            // console.log('File left the drag area');
-            dragText.textContent = "Drag & Drop";
-        });
-
-        // when file is dropped
-        dropArea.addEventListener("drop", (event) => {
-            event.preventDefault();
-            // console.log('File is dropped in drag area');
-
-            file = event.dataTransfer.files[0]; // grab single file even of user selects multiple files
-            // console.log(file);
-            displayFile();
-        });
-
-        function displayFile() {
-            let fileType = file.type;
-            // console.log(fileType);
-
-            let validExtensions = ["image/jpeg", "image/jpg", "image/png"];
-
-            if (validExtensions.includes(fileType)) {
-                // console.log('This is an image file');
-                let fileReader = new FileReader();
-
-                fileReader.onload = () => {
-                    let fileURL = fileReader.result;
-                    // console.log(fileURL);
-                    let imgTag = `<img style="width:300px; height: 200px; object-fit: cover;" src="${fileURL}" alt="">`;
-                    dropArea.innerHTML = imgTag;
-                };
-                fileReader.readAsDataURL(file);
-            } else {
-                alert("Formato non supportato");
-                dropArea.classList.remove("active");
-            }
-        }
-    </script>
-
 </div>
 
 
@@ -154,11 +87,21 @@
 
     private string avatarImg = "default.png";
 
+    IJSObjectReference? module;
+
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
     }
 
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        @* if (firstRender)
+        { *@
+            module = await JS.InvokeAsync<IJSObjectReference>("import", "./_content/ConstructionSiteLibrary/dragndrop.js");
+            //await module.InvokeVoidAsync("loadCanvas", canvasId);
+        @* } *@
+    }
 
     private void ToggleDropdown()
     {
