--- a/ConstructionSiteLibrary/Components/Generics/ActivityTopBar.razor
+++ b/ConstructionSiteLibrary/Components/Generics/ActivityTopBar.razor
@@ -1,8 +1,23 @@
 ﻿@using Microsoft.JSInterop
 @using ConstructionSiteLibrary.Model.DocumentCompilation
+@using ConstructionSiteLibrary.Components.Utilities;
+@using ConstructionSiteLibrary.Model;
+@using ConstructionSiteLibrary.Utility;
+@using Microsoft.AspNetCore.Components;
+@using Radzen;
+@using Radzen.Blazor;
+@using Shared.Documents;
+@using ConstructionSiteLibrary.Managers
+@using ConstructionSiteLibrary.Repositories
+@using Shared;
+@using Shared.Templates
+@using ConstructionSiteLibrary.Utility
+@using ConstructionSiteLibrary.Components.Generics;
 
 @inject IJSRuntime JS
 @inject NavigationService NavigationService
+@inject DialogService DialogService
+ 
 
 <div class="row activityBar">
     <div class="col d-flex justify-content-center justify-content-lg-start">
@@ -13,7 +28,8 @@
     <div class="col d-flex justify-content-center">
         <RadzenFormField Text="Navigazione documento" Variant="Variant.Outlined">
             <ChildContent>
-                <RadzenDropDown Data="@DocumentNavigator.Anchors" TValue="DocumentAnchor" TextProperty="Text" Change="@(args=> NavigaPagina(args))" />
+                <RadzenDropDown Data="@DocumentNavigator.Anchors" TValue="DocumentAnchor" TextProperty="Text"
+                    Change="@(args=> NavigaPagina(args))" />
             </ChildContent>
         </RadzenFormField>
 
@@ -21,7 +37,8 @@
     <div class="col d-flex justify-content-center justify-content-lg-end mt-sm-1">
         @if (ShowPreview)
         {
-            <RadzenButton Icon="article" Text="Anteprima" Click="@Preview" IsBusy="@onSaving" class="my-button" Style="margin-right:10px;"/>
+            <RadzenButton Icon="article" Text="Anteprima" Click="@Preview" IsBusy="@onSaving" class="my-button"
+                Style="margin-right:10px;" />
         }
         <RadzenButton Icon="save" Text="Salva" Click="@Save" IsBusy="@onSaving" class="my-button" />
     </div>
@@ -44,10 +61,10 @@
     [Parameter]
     public bool ShowPreview { get; set; }
     [Parameter]
-    public DocumentNavigator? DocumentNavigator{ get; set; }
+    public DocumentNavigator? DocumentNavigator { get; set; }
 
 
-    private bool onSaving; 
+    private bool onSaving;
     private const string JS_FILE = "./_content/ConstructionSiteLibrary/ActivityTopBar.js";
     private IJSObjectReference? jsModule;
 
@@ -60,7 +77,7 @@
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
-        if(DocumentNavigator is not null)
+        if (DocumentNavigator is not null)
         {
             DocumentNavigator.OnAnchorsChanged += Update;
         }
@@ -76,10 +93,20 @@
         onSaving = newStatus;
     }
 
-
-    private void Back()
+    public async Task Back()
     {
-        NavigationService.Back();
+        var titolo = "ATTENZIONE!";
+        var text = "Sei sicuro di voler abbandonare la compilazione?";
+        var confirmationResult = await DialogService.Confirm(text, titolo, new ConfirmOptions
+            {
+                OkButtonText = "No",
+                CancelButtonText = "Sì"
+            });
+        Console.WriteLine("cliccato: " + confirmationResult);
+        if (confirmationResult == false)
+        {
+            NavigationService.Back();
+        }
     }
 
     private async Task Save()
@@ -95,7 +122,7 @@
 
     private async Task NavigaPagina(object args)
     {
-        if(jsModule is not null)
+        if (jsModule is not null)
         {
             var ancora = args as DocumentAnchor;
             await jsModule.InvokeVoidAsync("navigaPagina", ancora.Anchor);
