--- a/ConstructionSiteLibrary/Components/Documents/Compilation/ReportConstructorSiteDataSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/ReportConstructorSiteDataSection.razor
@@ -53,8 +53,8 @@ else
             <div class="my-1">
                 <RadzenLabel Text="Condizioni meteo" />
                 <div class="bordered text-center p-3">
-                    <RadzenRadioButtonList Data="@meteoConditions" TValue="MeteoConditionModel" Orientation="@meteoButtonsOrientation"
-                                           Value="@Document.MeteoCondition" TextProperty="Description" />
+                    <RadzenRadioButtonList @bind-Value="@Document.MeteoCondition" Data="@meteoConditions" TValue="MeteoConditionModel" Orientation="@meteoButtonsOrientation"
+                                            TextProperty="Description"/>
                 </div>
             </div>
         </fieldset>
@@ -156,6 +156,7 @@ else
     {
         meteoConditions = await DocumentsRepository.GetMeteoConditions();
         ClientsList = await ClientsRepository.GetClients();
+        Document.MeteoCondition = meteoConditions.Where(x => x.Id == Document.MeteoCondition.Id).SingleOrDefault();
     }
 
 
