removed hard header

--- a/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
+++ b/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
@@ -488,10 +488,10 @@ else
                 jsModule = await JS.InvokeAsync<IJSObjectReference>("import", "./_content/ConstructionSiteLibrary/pdfManager.js");
             }
 
-            String templateString = "templateString";
-            String compilatorString = "compilatorString";
-            String committenteString = "committenteString";
-            String indirizzoCantiereString = "indirizzoCantiereString";
+            String templateString = Document.Title;
+            String compilatorString = Document.CSE ?? "";
+            String committenteString = Document.Client.Name ?? "";
+            String indirizzoCantiereString = Document.ConstructorSite.Address ?? "";
 
 
             // Generate and download the PDF
