--- a/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
+++ b/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
@@ -387,7 +387,7 @@ else
                                 }
                                 <div class="borderBottom w-100"></div>
                                 <div class="hstack mt-2">
-                                    <RadzenText TextStyle="TextStyle.Caption" class="mb-0">Quesiti contestati:</RadzenText>
+                                    <RadzenText TextStyle="TextStyle.Caption" class="mb-0">Riferimento quesiti:</RadzenText>
                                     @foreach (var questionId in sign.ReporteQuestionsIds)
                                     {
                                         <RadzenText TextStyle="TextStyle.Caption" class="mb-0">@DocumentUtils.PrintQuestionForReported(questionId, Document)</RadzenText>
