--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
@@ -37,7 +37,7 @@
                                             @if (question.Attachments.Count > 0)
                                             {
 
-                                                <RadzenButton Icon="Image" class="buttonPhoto" />
+                                                <RadzenButton Icon="Image" class="buttonPhoto" Click="@(() => OpenQuestionAttachmentsGallery(visual.Category, question))" />
 
                                             }
                                         </div>
@@ -317,6 +317,23 @@
                 { "Companies", Companies },
             };
         await DialogService.OpenAsync<FormSelectCompany>("Seleziona aziende", parameters: param, options: newOptions);
+    }
+
+    private async Task OpenQuestionAttachmentsGallery(DocumentCategoryModel category,  DocumentQuestionModel question)
+    {
+        var width = screenComponent.GetScreenSize();
+        // creo uno style aggiuntivo da inviare al componente caricato con il popup come options
+        var additionalStyle = $"min-height:fit-content;height:fit-content;width:{width}px;max-width:600px";
+        var newOptions = new DialogOptions
+            { Style = additionalStyle };
+        //creo parametri da inviare al componente caricato con il popup
+        var param = new Dictionary<string, object>
+            {
+                //tra i parametri che invio al dialog creo un EventCallback da passare al componente
+                { "Question", question },
+                { "Category", category },
+            };
+        await DialogService.OpenAsync<QuestionAttachments>("Galleria allegati", parameters: param, options: newOptions);
     }
 
     private async Task SelectedCompanies()
