1816 - fix layout punti contestati in firma
- i punti contestati ora vanno correttamente a capo

--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
@@ -162,7 +162,10 @@ else
                         var cs = Document.Signatures.Where(x => x.CompanyId == companyId).FirstOrDefault();
                         if (cs is not null)
                         {
-                            cs.ReporteQuestionsIds.Add(question.Id);
+                            if (!cs.ReporteQuestionsIds.Contains(question.Id))
+                            {
+                                cs.ReporteQuestionsIds.Add(question.Id);
+                            }
                         }
                         else
                         {
